Working on updating unit tests and adding features to the valuation/logic